# simple-metrics

./: Cargo.toml  LICENSE  README.md  shell.nix
benches/: label_checker.rs  label_matcher.rs  labels_render.rs  matchers.rs  render_into_metrics.rs
examples/: README.md  macro_heavy.rs  no_macro.rs  no_macro2.rs  no_macro3.rs  simple.rs
src/: cache.rs  interner.rs  labels.rs  labels_builder.rs  lib.rs  macros.rs  matcher.rs  matchers.rs  metric_comptime.rs  metric_def.rs  store.rs
