[package]
name = "simple-metrics"
version = "0.3.1"
edition = "2021"

authors = ["Sergei Mishin"]

description = "Library to flexibly render Prometheus metrics"
repository = "https://github.com/qezz/simple-metrics"
license = "MIT OR Apache-2.0"

keywords = ["metrics", "telemetry", "prometheus"]

[dependencies]
