[package]
name = "simple-metrics"
version = "0.3.4"
edition = "2021"

authors = ["Sergei Mishin"]

description = "Library to flexibly render Prometheus metrics"
repository = "https://github.com/qezz/simple-metrics"
license = "MIT OR Apache-2.0"

keywords = ["metrics", "telemetry", "prometheus"]

[dependencies]

[[example]]
name = "simple"
test = true
harness = false
